--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
     "algoliasearch": "^3.35.1",
+    "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-algolia": "^0.18.2",
